@@ -1,51 +1,0 @@
-The following is an incomplete list of people that have contributed to this 
-project in some way or another, in no particular order...
-
-
-	Terral (Will LaShell,) for spotting quite a few bugs, suggesting all
-	kinds of improvements  (good ones too ;-), for creating #gedit and
-	the cool TBOT that resides their, and for being our general PR person.
-
-	Chris Lahey, for his excellent plugins api which he's donated to us from
-	his text editor GO, and for a great deal of other help along the way.
-	
-	Andy Kahn, for the Toolbar, Message Box, Document list, and numerous
-	other improvements.
-
-	The entire GTK team, for this excellent toolkit - thanks especially
-	goes to those that worked on the text widget, in particular Owen Taylor
-	who's been very responsive when we have a question or find a bug.
-
-	Members of the GNOME project, especially Miguel, for adding this
-	to their cvs tree.
-
-	The people in #gimp and on the gtk list for answering all our stupid
-	questions on cvs, gtk, etc :-)
-
-	Martin Wahlen, for his spell-check plugin, and some bugfixes.
-
-	Mikael Hermansson, for his project management plugin, bugfixes, and
-	code contributions.
-
-	Christopher Lansdown, for catching several major bugs, and providing
-	fixes for most of them. Also for improvements to the UI.
-
-	Robert Edmonds, for knowing a good app when he saw it, and for
-	putting it on the excellant Debian cd.
-
-	Nicholas Lamb, for spotting and fixing a bug in the way Search didn't
-	finish scanning the document.
-
-	T Taneli Vahakanga, for providing a patch that kept gEdit from crashing
-	when you try to save an empty document.
-
-	Ian Garrison, for spotting several bugs, and for some great 
-	encouragement :-)
-
-	Roberto Majadas for adding input pipes.
-	
-	Lots and lots of other people who have slipped my mind at the moment.
-	If you're one of those people who deserves to be on this list but isn't
-	for some reason, let me know :)
-
-                                               -Evan (evan@worldpath.net)
