@@ -3,20 +3,12 @@ desktop_in_files = gedit.desktop.in
 desktop_DATA 	 = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
-keysdir 	= $(datadir)/mime-info
-keys_in_files 	= gedit.keys.in
-keys_DATA 	= $(keys_in_files:.keys.in=.keys) 
-@INTLTOOL_KEYS_RULE@
-
 schemasdir	 = $(GCONF_SCHEMA_FILE_DIR)
 schemas_in_files = gedit.schemas.in
 schemas_DATA 	 = $(schemas_in_files:.schemas.in=.schemas)
 @INTLTOOL_SCHEMAS_RULE@
 
 man_MANS = gedit.1
-
-app_DATA = gedit.applications
-appdir = $(datadir)/application-registry
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gedit-@GEDIT_MAJOR@.pc
@@ -37,15 +29,12 @@ endif
 
 EXTRA_DIST = 				\
 	$(desktop_in_files)		\
-	$(keys_in_files)		\
 	$(schemas_in_files)		\
 	$(man_MANS)			\
-	$(app_DATA)			\
 	gedit.pc.in
 
 CLEANFILES =	 			\
 	$(desktop_DATA)			\
-	$(keys_DATA)			\
 	$(schemas_DATA)			\
 	$(pkgconfig_DATA)
 
