@@ -8,7 +8,6 @@
 .RI [--encoding]
 .RI [--new-window]
 .RI [--new-document]
-.RI [--quit]
 .RI [+[num]]
 .RI [filename(s)...]
 .SH DESCRIPTION
@@ -36,9 +35,6 @@ Create a new toplevel window in an existing instance of gedit.
 .TP
 \fB\-\-new\-document\fR
 Create a new document in an existing instance of gedit.
-.TP
-\fB\-\-quit\fR
-Quit an existing instance of gedit.
 .TP
 \fB+[num]\fR
 For the first file, go to the line specified by "num" (do not insert a space between the "+" sign and the number).
