@@ -1,8 +1,0 @@
-gedit
-	command=gedit
-	name=gedit
-	can_open_multiple_files=true
-	expects_uris=true
-	requires_terminal=false
-	mime_types=text/*,text/html,text/plain
-	uses_gnomevfs=true
