@@ -1,2 +1,0 @@
-text/*
-	short_list_application_ids=gedit
