@@ -47,9 +47,6 @@ void			   gedit_language_set_tag_style	  (GtkSourceLanguage         *language,
 							   const GtkSourceTagStyle   *style);
 
 void 			   gedit_language_init_tag_styles (GtkSourceLanguage         *language);
-const GSList		*gedit_languages_manager_get_available_languages_sorted (GtkSourceLanguagesManager *lm);
-
-
 
 const GSList		  *gedit_languages_manager_get_available_languages_sorted
 							  (GtkSourceLanguagesManager *lm);
