@@ -1,3 +1,7 @@
+2006-01-27  Paolo Borelli  <pborelli@katamail.com>
+
+	* remove outdated files, patch by Stephane Loeuillet.
+
 2006-01-21  Paolo Borelli  <pborelli@katamail.com>
 
 	* data/gedit-desktop.in.in: add GNOME/GTK categories to the
